information on building an index

--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 
 \todo[inline]{A bunch of broken displaymode tombstones can have their positions fixed by using http://tex.stackexchange.com/a/66221/2671.}
 
-\todo[inline]{Compile an index by replacing all the \texttt{textit} commands in definition environments with some more fancy macro that tags it for inclusion.}
+\todo[inline]{Compile an index by replacing all the \texttt{textit} commands in definition environments with some more fancy macro that tags it for inclusion.  There's information on how indices are compiled here: https://en.wikibooks.org/wiki/LaTeX/Indexing.}
 
 \todo[inline]{Remember to use $f\co A \to B$ everywhere.}
 
