--- a/quillen.tex
+++ b/quillen.tex
@@ -194,8 +194,8 @@ For $R$ a $\Q$--algebra, there is a canonical isomorphism of formal groups \[\lo
 Taking a cue from classical Lie theory, we attempt to use integration to define exponential and logarithm functions for a given formal group law $F$.  This is typically accomplished by studying invariant differentials: a $1$--form $\omega \in \Omega^1_{A/R}$ is said to be \textit{invariant (under $F$)} when $\omega = T_y^* \omega$ for all translations $T_y(x) = x +_F y$.  In terms of a coordinate $\omega = f(x) dx$, this condition becomes \[f(x) dx = f(y +_F x) d(y +_F x) = f(y +_F x) \frac{\partial(y +_F x)}{\partial x} dx.\]  Restricting to the origin by setting $x = 0$, we deduce the condition \[f(0) = f(y) \cdot \left. \frac{\partial(y +_F x)}{\partial x} \right|_{x=0}.\]  Since $R$ is a $\Q$--algebra, integrating against $y$ yields \[\log_F(y) = \int f(y) \, dy = f(0) \int \left( \left. \frac{\partial(y +_F x)}{\partial x} \right|_{x=0} \right)^{-1} dy.\]  To see that the series $\log_F$ has the claimed homomorphism property, note that \[\frac{\partial \log_F(y +_F x)}{\partial x} dx = f(y +_F x) d(y +_F x) = f(x) dx = \frac{\partial \log_F(x)}{\partial x} dx,\] so $\log_F(y +_F x)$ and $\log_F(x)$ differ by a constant.  Checking at $y = 0$ shows that the constant is $\log_F(x)$, hence \[\log_F(x +_F y) = \log_F(x) + \log_F(y).\]  The choice of boundary value $f(0)$ corresponds to the choice of vector in $T_0 \G$.
 \end{proof}
 
-\begin{example}
-Consider the formal group law $x_1(t_1) +_{\G_m} x_2(t_2) = t_1 + t_2 - t_1 t_2$ studied in \Cref{CPinftyKUExample}.  Its associated rational logarithm is computed as \[\log_{\G_m}(t_2) = f(0) \cdot \int \frac{1}{1 - t_2} dt_2 = -f(0) \log(1 - t_2) = -f(0) \log(x_2),\] where ``$\log(x_2)$'' refers to the classical natural logarithm of $x_2$.
+\begin{example}\label{GmAndItsLogExample}
+Consider the formal group law $x_1(t_1) +_{\G_m} x_2(t_2) = t_1 + t_2 - t_1 t_2$ studied in \Cref{CPinftyKUExample}.  Its associated rational logarithm is computed as \[\log_{\G_m}(t_2) = f(0) \cdot \int \frac{1}{1 - t_2} dt_2 = -f(0) \log(1 - t_2) = f(0) \log(x_2),\] where ``$\log(x_2)$'' refers to the classical natural logarithm of $x_2$.
 \end{example}
 
 
