fix small typos in the introduction

--- a/intro.tex
+++ b/intro.tex
@@ -7,7 +7,7 @@
 
 The goal of this book is to communicate a certain \textit{weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal just for this introduction is to tell a story about one theorem where it is especially apparent.
 
-To begin, we will define a homology theory called ``bordism homology''.  Recall that the singular homology of a space $X$ is comes about by probing $X$ with simplices: beginning with the collection of continuous maps $\sigma\co \Delta^n \to X$, we take the free $\Z$--module on each of these sets and construct a chain complex \[\cdots \xrightarrow{\partial} \Z\{\Delta^n \to X\} \xrightarrow{\partial} \Z\{\Delta^{n-1} \to X\} \xrightarrow{\partial} \cdots.\]  Bordism homology is constructed analogously, but using manifolds $Z$ as the probes instead of simplices:\footnote{One doesn't need to take the free abelian group on anything, since the disjoint union of two manifolds is already a (disconnected) manifold, whereas the disjoint union of two simplices is not a simplex.}
+To begin, we will define a homology theory called ``bordism homology''.  Recall that the singular homology of a space $X$ comes about by probing $X$ with simplices: beginning with the collection of continuous maps $\sigma\co \Delta^n \to X$, we take the free $\Z$--module on each of these sets and construct a chain complex \[\cdots \xrightarrow{\partial} \Z\{\Delta^n \to X\} \xrightarrow{\partial} \Z\{\Delta^{n-1} \to X\} \xrightarrow{\partial} \cdots.\]  Bordism homology is constructed analogously, but using manifolds $Z$ as the probes instead of simplices:\footnote{One doesn't need to take the free abelian group on anything, since the disjoint union of two manifolds is already a (disconnected) manifold, whereas the disjoint union of two simplices is not a simplex.}
 \begin{align*}
 \cdots & \xrightarrow{\partial} \{Z^n \to X \mid \text{$Z^n$ a compact $n$--manifold}\} \\
 & \xrightarrow{\partial} \{Z^{n-1} \to X \mid \text{$Z^{n-1}$ a compact $(n-1)$--manifold}\} \\
@@ -18,7 +18,15 @@ To begin, we will define a homology theory called ``bordism homology''.  Recall 
 This forms a chain complex of monoids under disjoint union of manifolds, and its homology is written $MO_*(X)$.  These are naturally abelian groups, and moreover they satisfy the axioms of a generalized homology theory. \qed
 \end{lemma}
 
-In fact, we can define a bordism theory $MG$ for any suitable family of structure groups $G(n) \to O(n)$.  The coefficient ring of $MG$, or its value $MG_*(*)$ on a point, gives the ring of $G$--bordism classes, and generally $MG_*(Y)$ gives a kind of ``bordism in families over the space $Y$''.  There are comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:\todo{dshi:I don't follow here. How does this replacement go explicitly? Somehow I understood it when you explained this to me in person but now I don't see it anymore.} \[MO \to H\Z/2, \quad MSO \to H\Z.\] In both cases, we can evaluate on a point to get ring maps, called ``genera'': \[MO_*(*) \to \Z/2 \quad \text{and} \quad MSO_*(*) \to \Z,\] neither of which is very interesting, since they're both zero in positive degrees.
+In fact, we can define a bordism theory $MG$ for any suitable family of structure groups $G(n) \to O(n)$.  The coefficient ring of $MG$, or its value $MG_*(*)$ on a point, gives the ring of $G$--bordism classes, and generally $MG_*(Y)$ gives a kind of ``bordism in families over the space $Y$''.  There are comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:
+\begin{align*}
+MO & \to H\Z/2, &
+MSO & \to H\Z. \\
+\intertext{In both cases, we can evaluate on a point to get ring maps, called ``genera'':}
+MO_*(*) & \to \Z/2, &
+MSO_*(*) & \to \Z,
+\end{align*}
+neither of which is very interesting, since they're both zero in positive degrees.
 
 However, having maps of homology theories (rather than just maps of coefficient rings) is considerably more data then just the genus.  For instance, we can use it to extract a theory of integration as follows.  Consider the following special case of oriented bordism, where we evaluate $MSO_*$ on an infinite loopspace:
 \begin{align*}
