--- a/mo.tex
+++ b/mo.tex
@@ -644,18 +644,16 @@ At the other extreme, we can pick the extremely nondegenerate case $X = \S$, whe
 
 \todo{Jon asked: spectral sequences coming from $\pi_*$ of a Tot tower increase Tot degree. ANSS differentials decrease degree: they run against the multiplicative structure in pictures. What's going on with this?  I think this is a duality effect: working with the Steenrod algebra versus its dual.}
 
-\begin{landscape}
-\begin{figure}[b]
+\begin{sidewaysfigure}
+\centering
 \input{koass.tex}
-
 \caption{The $H\F_2$--Adams spectral sequence for $kO$, which collapses at the second page.  North and north-east lines denote multiplication by $2$ and by $\eta$.}\label{kOASSFigure}
-\end{figure}
-\begin{figure}[b]
+\end{sidewaysfigure}
+\begin{sidewaysfigure}
+\centering
 \input{ass.tex}
-
 \caption{A small piece of the $H\F_2$--Adams spectral sequence for the sphere, beginning at the second page.  North and north-east lines denote multiplication by $2$ and by $\eta$, north-west lines denote $d_2$-- and $d_3$--differentials.}\label{HF2ASSFigure}
-\end{figure}
-\end{landscape}
+\end{sidewaysfigure}
 
 
 
