--- a/finite.tex
+++ b/finite.tex
@@ -157,9 +157,9 @@ We are now close enough to our original situation that we can make the last leap
 The \textit{descent object} for $X$ along $\eta\co \S \to E$ is the cosimplicial spectrum
 \[\mathcal{D}_E(X) := \left\{
 \begin{tikzcd}
-\begin{array}{c} E \\ \sm \\ X \end{array} \arrow[leftarrow]{r}{\mu} \arrow[shift left=(\baselineskip)]{r}{\eta_L} \arrow[shift right=\baselineskip]{r}{\eta_R} &
-\begin{array}{c} E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=(\baselineskip)]{r} \arrow{r}{\Delta} \arrow[leftarrow, shift right=(\baselineskip)]{r} \arrow[shift right=(2*\baselineskip)]{r} &
-\begin{array}{c} E \\ \sm \\ E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=(\baselineskip)]{r} \arrow[leftarrow]{r} \arrow[shift right=(\baselineskip)]{r} \arrow[leftarrow, shift right=(2*\baselineskip)]{r} \arrow[shift right=(3*\baselineskip)]{r} &
+\begin{array}{c} E \\ \sm \\ X \end{array} \arrow[leftarrow, shift left=(\baselineskip)]{r}{\mu} \arrow[shift left=(2*\baselineskip)]{r}{\eta_L} \arrow{r}{\eta_R} &
+\begin{array}{c} E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=(\baselineskip)]{r}{\Delta} \arrow[leftarrow]{r} \arrow[shift right=(\baselineskip)]{r} &
+\begin{array}{c} E \\ \sm \\ E \\ \sm \\ E \\ \sm \\ X \end{array} \arrow[shift left=(4*\baselineskip)]{r} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=(\baselineskip)]{r} \arrow{r} \arrow[leftarrow, shift right=(\baselineskip)]{r} \arrow[shift right=(2*\baselineskip)]{r} &
 \cdots
 \end{tikzcd}
 \right\}.\]
