--- a/finite.tex
+++ b/finite.tex
@@ -848,6 +848,7 @@ Include a legend: dots for geometric points, fuzz for deformation neighborhoods,
 
 \vspace{\baselineskip}
 I drew an approximation to this picture by hand in \texttt{other resources}.  I didn't get everything right, but I'd definitely like to use it as a template.
+\caption{Portrait of $\moduli{fg} \times \Spec \Z_{(p)}$.}
 \end{sidewaysfigure}
 
 
@@ -879,6 +880,7 @@ I drew an approximation to this picture by hand in \texttt{other resources}.  I 
 
 
 \section{Nilpotence and periodicity in finite spectra}
+\label{NilpotenceAndPeriodicity}
 %\section{Chromatic homology theories}
 
 \todo{Consider renaming this section.}
