--- a/cooperations.tex
+++ b/cooperations.tex
@@ -2,7 +2,24 @@
 
 \chapter{Unstable cooperations}\label{UnstableCooperationsChapter}
 
-\todo{Write an introduction for me.}
+
+In \Cref{StableContextLecture} (and more broadly in \Cref{ChapterFiniteSpectra}), we codified the structure of the stable $E$--cooperations acting on the $E$--homology of a spectrum $X$, attached to it the $E$--Adams spectral sequence which approximates the stable homotopy groups $\pi_* X$, and gave algebro-geometric descriptions of the stable cooperations for some typical spectra: $H\F_2$, $MO$, and $MU$.  We will now pursue a variation on this theme, where we consider the $E$--homology of a \emph{space} rather than of a generic spectrum.  In this Case Study, we will examine the theory of cooperations that arises from this set-up, called the \textit{unstable $E$--cooperations}.  This broader collection of cooperations has considerably more intricate structure than their stable counterparts, requiring the introduction of a new notion of an unstable context.  With that established, we will again find that $E$--homology assigns spaces to quasicoherent Cartesian sheaves over the unstable context, and we will again assemble an \emph{unstable} $E$--Adams spectral sequence approximating the \emph{unstable} homotopy groups of the input space, whose $E^2$--page in favorable situations is tracked by the cohomology of the sheaf over the unstable context.
+
+Remarkably, these unstable contexts also admit algebro-geometric interpretations.  In finding the right language for this, we introduce different subclasses of cooperations (e.g., \textit{additive}), and we are also naturally led to consider \textit{mixed cooperations} (as we did stably in \Cref{OrientationsOnEAndMU}) of the form $E_* \OS{F}{*}$.  The running theme is that when $E$ and $F$ are complex-orientable, there is a natural approximation map\todo{Should this be $E_* \OS{F}{2*}$?} \[\Spec Q^* E_* \OS{F}{*} \to \InternalHom{FormalGroups}(\CP^\infty_E, \CP^\infty_F)\] which is an isomorphism in every situation of interest.  However, these isomorphisms do not appear to admit uniform proofs\footnote{The best uniform result I can find is due to Butowiez and Turner~\cite[Theorem 3.12]{ButowiezTurner}.}, so we instead investigate the following cases by hand:
+\todo{You will probably have to re-reference this list.}
+\begin{itemize}
+\item (\Cref{UnstableSteenrodCoops}:) For $E = F = H\F_2$, we compute the full unstable dual Steenrod algebra $H\F_2{}_* \OS{H\F_2}{*}$ by means of iterated bar spectral sequences.  We then pass to the additive unstable cooperations, where we show by hand that this presents the homomorphism scheme $\InternalHom{FormalGroups}(\G_a, \G_a)$.  Finally, we pass to the stable additive cooperations, and we check that our results here are compatible with the isomorphism \[\Spec H\F_2{}_* H\F_2 \cong \InternalAut{\G_a}\] presented in \Cref{SteenrodAlgIdentifiedWithAutGa}.
+\item (\Cref{COableCoopnsII}:) We next consider the case where $F = MU$ and where $E$ is any complex-orientable theory.  We begin with the case $E = H\F_p$, where we can again approach the problem using iterated bar spectral sequences.  The resulting computation is sufficiently nice that we can use this special case of $E = H\F_p$ to deduce the further case of $E = H\Z_{(p)}$, then $E = H\Z$, then $E = MU$, and then finally $E$ any complex-orientable theory.
+\item (\Cref{LEFTCooperations}:) Having been able to vary $E$ as widely as possible in the previous case, we then turn to trying to vary $F$.  This is considerably harder, since the infinite loopspaces $\OS{F}{*}$ associated to $F$ are extremely complicated and vary wildly under even ``small'' changes in $F$.  However, in the special case of $E = H\F_p$, we have an incredibly powerful trick available to us: Dieudonn\'e theory, discussed in \Cref{SectionDieudonneModules}, gives an equivalence of categories \[D_*\co \CatOf{HopfAlgebras}^{> 0, \fin}_{\F_p/} \to \CatOf{GradedDMods},\] which postcomposes with \[\CatOf{Spectra} \xrightarrow{\Loops^\infty} \CatOf{Loopspaces} \xrightarrow{H\F_p{}_*} \CatOf{HopfAlgebra}^{>0, \fin}_{\F_p/} \xrightarrow{D_*} \CatOf{GradedDMods} \subseteq \CatOf{Modules}_{Cart}\] \todo{``Cart'' is a placeholder.} to give a homological functor.  This means that the Dieudonn\'e module associated to an infinite loopspace varies stably with the spectrum underlying the loopspace, which is enough leverage to the settle the case where $F$ is any Landweber--flat theory.
+\item (\Cref{CoopnsForMoravaKandHA}:) Finally, we settle one further case not covered by any of our generic hypotheses above: $E = K_\Gamma$ and $F = H\Z/p^j$.  Neither $K_\Gamma$ nor $H\Z/p^j$ is Landweber--flat, but because $K_\Gamma$ is a field spectrum and because the additive group law associated to $H\Z/p^j$ is so simple, we can still perform the requisite iterated bar spectral sequence calculation by hand.
+\end{itemize}
+
+This last case is actually our real goal, as we are about to return to the project outlined in the Introduction.  In the language of \Cref{IntroAHSMU6Thm}, choosing $\Gamma$ to be the formal completion of an elliptic curve at the identity section presents the spectra $K_\Gamma$ and $E_\Gamma$ of \Cref{NilpotenceAndPeriodicity} as the most basic examples of \textit{elliptic spectra}.  The goal of that Theorem is to study $E_* BU[6, \infty)$ for $E$ an elliptic spectrum, so when proving it in \Cref{ChapterSigmaOrientation} we will be led to consider the fiber sequences
+\begin{align*}
+BSU \to BU & \to \OS{H\Z}{2}, & \OS{H\Z}{3} \to BU[6, \infty) & \to BSU,
+\end{align*}
+which mediate the difference between $E_* BU$ and $E_* BU[6, \infty)$ by means of $E_* \OS{H\Z}{2}$ and $E_* \OS{H\Z}{3}$.  Thus, in our pursuit of $K_\Gamma{}_* BU[6, \infty)$, we will want to have $K_\Gamma{}_* \OS{H\Z}{*}$ already in hand, as well as an algebro-geometric interpretation of it.
+
 
 
 
@@ -791,7 +808,7 @@ To see this, note that because $E_{2n-2k-1} B(2n) \to D_{2n} H_* \OS{E}{2k+1}$ i
 
 
 
-\section{Cooperations and geometric points on \texorpdfstring{$\moduli{fg}$}{Mfg}}
+\section{Cooperations and geometric points on \texorpdfstring{$\moduli{fg}$}{Mfg}}\label{CoopnsForMoravaKandHA}
 
 Throughout today, we will write $K$ for a Morava $K$--theory $K_\Gamma$ (which, if you like, you can take to be $K(d)$) and $A$ for a finitely generated abelian group, and $H$ for the associated Eilenberg--Mac Lane spectrum.  Our goal is to study the unstable mixed cooperations $K_* \OS{H}{*}$, which we expect to be connected to formal group homomorphisms $\Gamma \to \G_a$ but which isn't covered by any of the cases studied thus far.  This calculation is interesting to us for two reasons:
 \begin{enumerate}
