--- a/main.bib
+++ b/main.bib
@@ -205,6 +205,23 @@ MRREVIEWER = {Mark Hovey},
        URL = {http://dx.doi.org/10.2140/agt.2007.7.529},
 }
 
+@article {ButowiezTurner,
+    AUTHOR = {Butowiez, Jean-Yves and Turner, Paul},
+     TITLE = {Unstable multiplicative cohomology operations},
+   JOURNAL = {Q. J. Math.},
+  FJOURNAL = {The Quarterly Journal of Mathematics},
+    VOLUME = {51},
+      YEAR = {2000},
+    NUMBER = {4},
+     PAGES = {437--449},
+      ISSN = {0033-5606},
+   MRCLASS = {55S25},
+  MRNUMBER = {1806451},
+MRREVIEWER = {Donald M. Davis},
+       DOI = {10.1093/qjmath/51.4.437},
+       URL = {http://dx.doi.org/10.1093/qjmath/51.4.437},
+}
+
 @book {Demazure,
     AUTHOR = {Demazure, Michel},
      TITLE = {Lectures on {$p$}-divisible groups},
