remark on why kashiwabara’s calculations are relevant

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -42,6 +42,8 @@ In particular, leave character theory, $p$--divisible groups, and rational pheno
 
 \todo{This MO conversation looks interesting: http://chat.stackexchange.com/transcript/message/29465746\#29465746.}
 
+\todo{Jeremy pointed out that $\beta \in E_* QS^n$ comes up when considering a class $\alpha \in \pi_n R$ for a commutative $E$--algebra, which we promote to a class $E \sm QS^n \to R$, and then precompose with the homotopy class $\beta$.}
+
 
 ------ Here are various notes from conversations with Nat, recorded and garbled well after they happened. ------
 
