first pass at revisions to 3.5

--- a/main.bib
+++ b/main.bib
@@ -668,7 +668,23 @@ MRREVIEWER = {Alan Koch},
        URL = {http://dx.doi.org/10.1112/S0010437X12000723},
 }
 
-@article {Landweber,
+@article {LandweberHomologicalComodules,
+    AUTHOR = {Landweber, Peter S.},
+     TITLE = {Homological properties of comodules over {$M{\rm U}\sb\ast
+              (M{\rm U})$}\ and {BP{$\sb\ast $}}({BP})},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {98},
+      YEAR = {1976},
+    NUMBER = {3},
+     PAGES = {591--610},
+      ISSN = {0002-9327},
+   MRCLASS = {55B20},
+  MRNUMBER = {0423332},
+MRREVIEWER = {J. F. Adams},
+}
+
+@article {LandweberInvariantRegIdeals,
     AUTHOR = {Landweber, Peter S.},
      TITLE = {Invariant regular ideals in {B}rown-{P}eterson homology},
    JOURNAL = {Duke Math. J.},
