shores up Lecture 3.5

--- a/finite.tex
+++ b/finite.tex
@@ -963,24 +963,24 @@ Every homotopy class $\alpha \in \pi_{\ge 1} \S$ is nilpotent. \qed
 Let $M_{2n}(p)$ denote the mod--$p$ Moore spectrum with bottom cell in degree $2n$.  Then there is an index $n$ and a map $v: M_{2n}(p) \to M_0(p)$ such that $KU_* v$ acts by multiplication by the $n$\textsuperscript{th}\, power of the Bott class.  The minimal such $n$ is given by the formula \[n = \begin{cases} p-1 & \text{when $p \ge 3$}, \\ 4 & \text{when $p = 2$}. \qed \end{cases}\]
 \end{theorem}
 
-\noindent In particular, this means that $v$ cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism $p \in \pi_0 \End \S$ and coned it off, we can take the endomorphism $v \in \pi_{2p-2} \End M_0(p)$ and cone it off to form a new spectrum called $V(1)$.\footnote{The spectrum $V(1)$ is actually defined to be a finite spectrum with $BP_* V(1) \cong BP_* / (p, v_1)$. At $p = 2$ this spectrum doesn't exist and this is a misnomer.  More generally, at odd primes $p$ Nave shows that $V((p+1)/2)$ doesn't exist~\cite[Theorem 1.3]{Nave}.}  One can ask, then, whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra satisfying the following condition:
+\noindent In particular, the map $v$ cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism $p \in \pi_0 \End \S$ and coned it off, we can take the endomorphism $v \in \pi_{2p-2} \End M_0(p)$ and cone it off to form a new spectrum called $V(1)$.\footnote{The spectrum $V(1)$ is actually defined to be a finite spectrum with $BP_* V(1) \cong BP_* / (p, v_1)$. At $p = 2$ this spectrum doesn't exist and this is a misnomer.  More generally, at odd primes $p$ Nave shows that $V((p+1)/2)$ doesn't exist~\cite[Theorem 1.3]{Nave}.}  One can ask, then, whether the pattern continues: does $V(1)$ have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra satisfying the following condition:
 
 \begin{definition}[{\cite[Definition 4]{HopkinsSmith}, cf.\ \cite[Theorem 1]{DHS}}]
-A ring spectrum $E$ \textit{detects nilpotence} if for any ring spectrum $R$ the kernel of the Hurewicz homomorphism \[R_*\eta_E\co \pi_* R \to E_* R\] consists of nilpotent elements.
+A ring spectrum $E$ \textit{detects nilpotence} if for any ring spectrum $R$ the kernel of the Hurewicz homomorphism \[R_*\eta_E\co \pi_* R \to E_* R\] consists of nilpotent elements.  (In particular, such an $E$ cannot send such a nontrivial self-map to zero.)
 \end{definition}
 
-\noindent In particular, such an $E$ cannot send such a nontrivial self-map to zero.
-
-This question and surrounding issues formed the basis of Ravenel's nilpotence conjectures~\cite[Section 10]{RavenelLocalizationWRTPeriodic}, which were resolved by by Devinatz, Hopkins, and Smith~\cite{DHS,HopkinsSmith}.  Their main technical input was to demonstrate that we already have access to a nice homology theory which detects nilpotence:
+This question and surrounding issues formed the basis of Ravenel's nilpotence conjectures~\cite[Section 10]{RavenelLocalizationWRTPeriodic}, which were resolved by by Devinatz, Hopkins, and Smith~\cite{DHS,HopkinsSmith}.  One of their two main technical achievements was to demonstrate that we already have access to a nice homology theory which detects nilpotence:
 
 \begin{theorem}[{\cite[Theorem 1.i]{DHS}}]\label{DevinatzHopkinsSmith}
 The spectrum $MU$ detects nilpotence. \qed
 \end{theorem}
 
-\noindent They also show that the $MU$ is the universal object which detects nilpotence, in the sense that any other ring spectrum can have this property checked stalkwise on $\context{MU}$:
+\noindent This is a very hard theorem, and we will not attempt to prove it.
+% \todo{Someday, I want to include a formal-geometric interpretation of the proof of this theorem.  I would be thrilled to dedicate another 20 pages to that task here, if only I knew how to do it.}
+However, taking this as input, they are easily able to show several other interesting structural results about finite spectra.  For instance, they also show that the $MU$ is the universal object which detects nilpotence, in the sense that any other ring spectrum can have this property checked stalkwise on $\context{MU}$.
 
 \begin{corollary}[{\cite[Theorem 3]{HopkinsSmith}}]\label{LocalNilpotenceDetection}
-A ring spectrum $E$ detects nilpotence if and only if for all $0 \le d \le \infty$ and for all primes $p$, $K(d)_* E \ne 0$.
+A ring spectrum $E$ detects nilpotence if and only if for all $0 \le d \le \infty$ and for all primes $p$, $K(d)_* E \ne 0$ (i.e., the support of $\context{MU}(E)$ is not a proper substack of $\context{MU}$).
 \end{corollary}
 \begin{proof}
 If $K(d)_* E = 0$ for some $d$, then the non-nilpotent unit map $\S \to K(d)$ lies in the kernel of the Hurewicz homomorphism for $E$, so $E$ fails to detect nilpotence.
@@ -993,7 +993,7 @@ A nontrivial result of Johnson and Wilson shows that if $MU_* X = 0$, then for a
 \Cref{LocalNilpotenceDetection} has the following consequence, which speaks to the primacy of both the chromatic program and these results.
 
 \begin{definition}
-A ring spectrum $R$ is a \textit{field spectrum} when every $R$--module (in the homotopy category) splits as a wedge of suspensions of $R$.
+A ring spectrum $R$ is a \textit{field spectrum} when every $R$--module (in the homotopy category) splits as a wedge of suspensions of $R$.  (Equivalently, $R$ is a field spectrum when it has K\"unneth isomorphisms.)
 \end{definition}
 
 \begin{corollary}\label{FieldSpectraAreKTheories}
@@ -1006,10 +1006,6 @@ Now, consider an arbitrary field spectrum $R$.  Set $E = \bigvee_{\text{primes $
 \end{proof}
 
 \begin{remark}
-This is interesting in its own right, because field spectra are exactly those spectra which have K\"unneth isomorphisms.  So, even if you weren't neck-deep in algebraic geometry, you might still have struck across these homology theories just if you like to compute things, since K\"unneth formulas make things computable.
-\end{remark}
-
-\begin{remark}
 In the $2$--periodic setting we've become accustomed to, the analogue of \Cref{FieldSpectraAreKTheories} is that every $2$--periodic field spectrum splits as a wedge of suspensions of $K(d)P$.
 \end{remark}
 
@@ -1017,7 +1013,7 @@ In the $2$--periodic setting we've become accustomed to, the analogue of \Cref{F
 In service of \Cref{ExampleOfMoravasTheoriesAtGm}, the geometric definition of $MU$ given in \Cref{OriginalDefnOfBordism}, the edge cases of $K(0) = H\Q$ and $K(\infty) = H\F_p$, and the claimed primacy of these methods, we might wonder if there is any geometric interpretation of the field theories $K(d)$ for $0 < d < \infty$.  To date, this is a completely open question and the subject of intense research.
 \end{remark}
 
-We're now well-situated to address Ravenel's question about finite spectra and periodic self-maps.  The solution to this problem passes through some now-standard machinery for triangulated $\otimes$--categories.
+We're now well-situated to address Ravenel's question about finite spectra and periodic self-maps.  The key observation is that spectra admitting such self-maps are closed under some natural observations, leading the following definition:
 
 \begin{definition}
 A full subcategory of a triangulated category (e.g., the homotopy category of $p$--local finite spectra) is \textit{thick} if\ldots
@@ -1034,12 +1030,13 @@ A full subcategory of a triangulated category (e.g., the homotopy category of $p
 \todo{Do you really need the nilpotence condition?}
 \end{itemize}
 
-\noindent Ravenel shows the following useful result interrelating the $\CatOf C_d$:
+\noindent The categories $\CatOf C_d$ are the ones we are interested in analyzing, and we hope to identify these putative spaces $V(d)$ inside of them.  Ravenel shows the following foothold interrelating the $\CatOf C_d$:
+
 \begin{lemma}[{\cite[Theorem 2.11]{RavenelLocalizationWRTPeriodic}}]\label{CdCategoriesNest}
 For $X$ a finite complex, there is a bound \[\dim K(d-2)_* X \le \dim K(d-1)_* X.\]  In particular, there is an inclusion $\CatOf C_{d-1} \subseteq \CatOf C_d$.
 \end{lemma}
 \begin{proof}[Proof sketch]
-One should compare this with the statement that the stalk dimension of a coherent sheaf is upper semi-continuous.  In fact, this gives the essentials of the proof: one considers the ring spectrum $v_d^{-1} BP / I_{d-1}$, which admits two maps
+One should compare this with the statement that the stalk dimension of a coherent sheaf is upper semi-continuous.  In fact, this analogy gives the essentials of Ravenel's proof: one considers the ring spectrum $v_d^{-1} BP / I_{d-1}$, which admits two maps
 \begin{center}
 \begin{tikzcd}[row sep=1em]
 & v_{d-1}^{-1} (v_d^{-1} BP / I_{d-1}) \\
@@ -1050,27 +1047,23 @@ v_d^{-1} BP / I_{d-1} \arrow{ru} \arrow{rd} \\
 Studying the relevant $\Tor$ spectral sequences gives the result.
 \end{proof}
 
-In fact, all of the thick subcategories of $\CatOf{Spectra}^{\fin}_{(p)}$ are captured by this framework, as demonstrated in the following classification result.
+Hopkins and Smith are able to use their local nilpotence detection result, \Cref{LocalNilpotenceDetection}, to completely understand the behavior not only of the thick subcategories $\CatOf C_d$ but of \emph{all} thick subcategories of $\CatOf{Spectra}_{(p)}^{\fin}$.  In particular, this connects the $\CatOf C_d$ with the $\CatOf D_d$, as we will see.
 
 \begin{theorem}[{\cite[Theorem 7]{HopkinsSmith}}]\label{ThickSubcatClassification}
 Any thick subcategory $\CatOf C$ of the category of $p$--local finite spectra must be $\CatOf C_d$ for some $d$.
 \end{theorem}
 \begin{proof}
-Since $\CatOf C_d$ are nested by \Cref{CdCategoriesNest} and they form an exhaustive filtration (i.e., $C_\infty$ = 0), it is thus sufficient to show that any object $X \in \CatOf C$ with $X \in \CatOf C_d$ induces an inclusion $\CatOf C_d \subseteq \CatOf C$.  Write $R$ for the endomorphism ring spectrum $R = F(X, X)$, and write $F$ for the fiber of its unit map: \[F \xrightarrow{f} \S \xrightarrow{\eta_R} R.\]  Finally, let $Y$ be \emph{any} finite spectrum of type at least $d$.  It suffices to show $Y\in \CatOf C$.  
+Since $\CatOf C_d$ are nested by \Cref{CdCategoriesNest} and they form an exhaustive filtration (i.e., $C_\infty$ = 0), it is thus sufficient to show that any object $X \in \CatOf C$ with $X \in \CatOf C_d$ induces an inclusion $\CatOf C_d \subseteq \CatOf C$.  Write $R$ for the endomorphism ring spectrum $R = F(X, X)$, and write $F$ for the fiber of its unit map: \[F \xrightarrow{f} \S \xrightarrow{\eta_R} R.\]  Finally, let $Y \in \CatOf C_d$ be \emph{any} finite spectrum of type at least $d$.  Our goal is to demonstrate $Y \in \CatOf C$.  
 
 Now consider applying $K(n)$--homology (for \emph{arbitrary} $n$) to the map \[1 \sm f\co Y \sm F \to Y \sm \S.\]  The induced map is always zero:
 \begin{itemize}
 \item In the case that $K(n)_* X$ is nonzero, then $K(n)_* \eta_R$ is injective because $K(n)_*$ is a graded field, and so $K(n)_* f$ is zero.
 \item In the case that $K(n)_* X$ is zero, then $n \le d$ and, because of the bound on type, $K(n)_* Y$ is zero as well.
 \end{itemize}
-By a small variant of local nilpotence detection (\Cref{LocalNilpotenceDetection}, \cite[Corollary 2.5]{HopkinsSmith}), it follows for $j \gg 0$ that \[Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j}\] is null-homotopic.  Hence, one can calculate the cofiber to be \[\operatorname{cofib}\left( Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j} \right) \simeq Y \sm \operatorname{cofib} f^{\sm j} \simeq Y \vee (Y \sm \Susp F^{\sm j}),\] so that $Y$ is a retract of this cofiber.
+By a small variant of local nilpotence detection (\Cref{LocalNilpotenceDetection}, \cite[Corollary 2.5]{HopkinsSmith}), it follows for $j \gg 0$ that \[Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j}\] is null-homotopic.  Hence, one can calculate the cofiber to be \[\cofib\left( Y \sm F^{\sm j} \xrightarrow{1 \sm f^{\sm j}} Y \sm \S^{\sm j} \right) \simeq Y \sm \cofib f^{\sm j} \simeq Y \vee (Y \sm \Susp F^{\sm j}),\] so that $Y$ is a retract of this cofiber.
 
-We now work to show that this smash product lies in the thick subcategory $\CatOf C$ of interest.  First, note that $X \sm Z$ lies in $\CatOf C$ for any finite complex $Z$, since $Z$ can be expressed as a finite gluing diagram of spheres and smashing this through with $X$ expresses $X \sm Z$ as the iterated cofiber of maps with source and target in $\CatOf C$.  Next, consider the following smash version of the octahedral axiom: the factorization \[F \sm F^{\sm (j-1)} \xrightarrow{f \sm 1} \S \sm F^{\sm (j-1)} \xrightarrow{1 \sm f^{\sm (j-1)}} \S \sm \S^{\sm (j-1)}\] begets a cofiber sequence\todo{Is this sequence backwards? (Note that it doesn't matter: you can just write the factorization in the other order...)} \[F \sm \operatorname{cofib} f^{\sm (j-1)} \to \operatorname{cofib} f^{\sm j} \to \operatorname{cofib} f \sm \S^{\sm (j-1)}.\]
-
-Now turn an eye toward induction.  Noting that $\operatorname{cofib}(f) = R = X \sm DX$ lies in $\CatOf C$, we can use the $2$-out-of-$3$ property on the octahedral sequence to see that $\operatorname{cofib}(f^{\sm j})$ lies in $\CatOf C$.  It follows that $Y \sm \operatorname{cofib}(f^{\sm j})$ also lies in $\CatOf C$, and using the retraction $Y$ belongs to $\CatOf C$ as well.
+We now work to show that this smash product lies in the thick subcategory $\CatOf C$ of interest.  First, note that it suffices to show that $\cofib f^{\sm j}$ on its own lies in $\CatOf C$: a finite spectrum (such as $Y$ or $F$) can be expressed as a finite gluing diagram of spheres, and smashing this through with $\cofib f^{\sm j}$ then expresses $Y \sm \cofib f^{\sm j}$ as the iterated cofiber of maps with source and target in $\CatOf C$.  With that in mind, we will in fact show that $\cofib f^{\sm k}$ lies in $\CatOf C$ for all $k \ge 1$.  Consider the following smash version of the octahedral axiom: the factorization \[F \sm F^{\sm (k-1)} \xrightarrow{1 \sm f^{\sm (k-1)}} F \sm \S^{\sm (k-1)} \xrightarrow{f \sm 1} \S \sm \S^{\sm (k-1)}\] begets a cofiber sequence \[F \sm \cofib f^{\sm (k-1)} \to \cofib f^{\sm k} \to \cofib f \sm \S^{\sm (k-1)}.\]  Noting that the base case $\cofib(f) = R = X \sm DX$ lies in $\CatOf C$, we can inductively use the $2$-out-of-$3$ property on the octahedral cofiber sequence to see that $\cofib(f^{\sm k})$ lies in $\CatOf C$ for all $k$.  It follows in particular that $Y \sm \cofib(f^{\sm j})$ lies in $\CatOf C$, and using the retraction $Y$ belongs to $\CatOf C$ as well.
 \end{proof}
-
-Coupling \Cref{CdCategoriesNest} to \Cref{ThickSubcatClassification} already has interesting consequences about the lattice of thick subcategories of $\CatOf{Spectra}^{\fin}_{(p)}$.  However, it remains to show the nondegeneracy result that each $C_d$ is distinct, i.e., there exist type $d$ finite spectra for each $d$.  This is a \emph{considerably} harder theorem, which we will not attempt to prove.
 
 \begin{theorem}[{\cite[Theorem 9]{HopkinsSmith}}]
 A $p$--local finite spectrum is $K(d-1)$--acyclic exactly when it admits a $v_d$--self--map.  Additionally, the inclusion $\CatOf C_d \subsetneq \CatOf C_{d-1}$ is proper.
@@ -1086,7 +1079,7 @@ BP_* M_{|v_d| i_d}(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{v} \
 These maps are guaranteed by very careful study of Adams spectral sequences.
 \end{proof}
 
-\todo{Does this section have an ending?}
+They therefore conclude the strongest possible positive response to Ravenel's conjectures.  Not only can we continue the sequence \[\S, \S/p, \S/(p, v), \ldots,\] but in fact \emph{any} finite spectrum admits an (essentially unique) interesting periodic self-map.  This is maybe the most remarkable of the statements: although Nishida's theorem initially led us to think of periodic self-maps as rare, they are in fact ubiquitous.  Additionally, we learned that the shift\footnote{Sometimes referred to as the ``wavelength'' in the chromatic analogy.} of this self-map is determined by the first nonvanishing $K(d)$--homology, giving an effective detection tool.  Finally, all such periodicity shifts arise: for any $d$, there is a spectrum admitting a $v_d$--self--map but not a $v_{d-1}$--self--map.
 
 
 
