--- a/quillen.tex
+++ b/quillen.tex
@@ -726,7 +726,7 @@ w^m \sigma^{2m} P^n(f) & = P^n(\sigma^{2m} f) = P^n(g^* u_{m+q}) = g^* P^n(u_{m+
 Our conclusion, then, is that $P^n$ is \emph{almost} naturally expressible in terms of the Landweber--Novikov operations, where the ``\emph{almost}'' is controlled by some $w$--torsion.  Additionally, the various factors in this statement --- including $w$ itself --- are controlled by the formal group law ``$+_{MU}$'' associated to the tautological complex orientation of $MU$ and the subring $C$.
 
 \begin{remark}
-The target of the Steenrod operation \[P^n\co F(X, \Susp^{2m} MU) \to F(X_{hC_n}, \Susp^{2nm} MU)\] can be reidentified as \[F(X_{hC_n}, \Susp^{2nm} MU) \simeq F(X, \Susp^{2nm} MU)^{hC_n}.\]  For any $C_n$--equivariant spectrum $X$, there is a special map called the \textit{transfer map}\citeme{Greenlees--May?} \[X_{hC_n} \to X^{hC_n} \xrightarrow{\operatorname{cofib}} X^{tC_n}\] whose cofiber is called a \textit{Tate spectrum}.  The construction of Tate spectra is \emph{homological}\todo{Does this require $n$ to be prime?}: cofiber sequences of spaces are sent to cofiber sequences of Tate spectra, and hence there is a natural \emph{stable} (cf.\ \Cref{RemarkSteenrodOpnsAreNotStable}) map \[F(X, \Susp^{2m} MU) \to F(X, \Susp^{2nm} MU)^{tC_n}.\]  In this setting, passing to the Tate construction has the effect of inverting $t$ on homotopy\citeme{Greenlees--May?}, and so this is a homotopical witness to a generic kind of relation expressed in \Cref{QuillensKeyRelation}: the Steenrod operations become stable after multiplication by huge powers of $t$.  The method described here gives a precise formula for the relationship, and in the proof of \Cref{CGenerationForFiniteCplx} in the next Lecture we will discover the surprising fact that we only need to multiply by a \emph{single} $t$.
+The target of the Steenrod operation \[P^n\co F(X, \Susp^{2m} MU) \to F(X_{hC_n}, \Susp^{2nm} MU)\] can be reidentified as \[F(X_{hC_n}, \Susp^{2nm} MU) \simeq F(X, \Susp^{2nm} MU)^{hC_n}.\]  For any $C_n$--equivariant spectrum $X$, there is a special map called the \textit{transfer map}\citeme{Greenlees--May?} \[X_{hC_n} \to X^{hC_n} \xrightarrow{\cofib} X^{tC_n}\] whose cofiber is called a \textit{Tate spectrum}.  The construction of Tate spectra is \emph{homological}\todo{Does this require $n$ to be prime?}: cofiber sequences of spaces are sent to cofiber sequences of Tate spectra, and hence there is a natural \emph{stable} (cf.\ \Cref{RemarkSteenrodOpnsAreNotStable}) map \[F(X, \Susp^{2m} MU) \to F(X, \Susp^{2nm} MU)^{tC_n}.\]  In this setting, passing to the Tate construction has the effect of inverting $t$ on homotopy\citeme{Greenlees--May?}, and so this is a homotopical witness to a generic kind of relation expressed in \Cref{QuillensKeyRelation}: the Steenrod operations become stable after multiplication by huge powers of $t$.  The method described here gives a precise formula for the relationship, and in the proof of \Cref{CGenerationForFiniteCplx} in the next Lecture we will discover the surprising fact that we only need to multiply by a \emph{single} $t$.
 \end{remark}
 
 
