--- a/sigma.tex
+++ b/sigma.tex
@@ -1230,7 +1230,7 @@ Applying the Thom spectrum functor to the fiber square gives the pushout diagram
 \end{center}
 or, equivalently, an equivalence \[M\String \simeq MU[6, \infty) \sm_{\Susp^\infty_+ \Spin/SU} \S.\] \todo{It seems that this approach, which I presume is the one that ultimately works, is independent of all the earlier work involving $B\Spin$.} This in turn gives a $\Tor$ spectral sequence of signature \[\Tor^{K_* \Spin/SU}_{*, *}(K_* MU[6, \infty), K_*) \Rightarrow K_* M\String.\]  So, under the flatness hypothesis above, there are no higher $\Tor$ terms so the spectral sequence collapses to give \[K_* M\String \cong K_* MU[6, \infty) \mmod K_* \Spin/SU.\]  So, what remains to be shown is that $K_* \Spin/SU$ picks out the correct extra relation for $\Sigma$--structures \todo{You have not introduced $\Sigma$--structures yet.}.  Then, we need a density argument to show that this handles all of the at-a-point cases of elliptic cohomology.
 
-\todo{Mike thinks that $K(2)_* \Spin / SU \to K(2)_* BU[6, \infty)$ follows from this being a map of co/commutative Hopf algebras which is injective on indecomposables. I don't know how to prove this hypothesis condition and I also don't know how to prove the reduction.}
+\todo{Mike thinks that $K(2)_* \Spin / SU \to K(2)_* BU[6, \infty)$ follows from this being a map of co/commutative Hopf algebras which is injective on indecomposables. I don't know how to prove this hypothesis condition and I also don't know how to prove the reduction.  Bousfield's paper \textit{On $\lambda$--rings and the $K$--theory of infinite loopspaces} in Theorem 10.8 gives a description of flat Hopf algebras in the setting of periodic $K$--theory (or, rather, a reference).  It looks like his conclusion is that flat maps are \emph{precisely} the inclusions of Hopf algebras.  If we could adapt something like this to our situation, we would immediately learn that $K(2)_* \Spin / SU \to K(2)_* BU[6, \infty)$ is flat from Kitchloo--Laures--Wilson.}
 
 
 
