--- a/hinfty.tex
+++ b/hinfty.tex
@@ -44,6 +44,8 @@ In particular, leave character theory, $p$--divisible groups, and rational pheno
 
 \todo{Jeremy pointed out that $\beta \in E_* QS^n$ comes up when considering a class $\alpha \in \pi_n R$ for a commutative $E$--algebra, which we promote to a class $E \sm QS^n \to R$, and then precompose with the homotopy class $\beta$.}
 
+\todo{Bousfield's paper \textit{On $\lambda$--rings and the $K$--theory of infinite loopspaces} claims to have applications to Mahowald--Thompson type resolutions.}
+
 
 ------ Here are various notes from conversations with Nat, recorded and garbled well after they happened. ------
 
